@@ -1,0 +1,9 @@
+module_version: "1.0"
+
+var:
+  - name: paths
+    default:
+      - test.log
+
+ingest_pipeline: ingest/default.json
+prospector: config/test.yml
